sistemate alcune cose

--- a/src/app/componenti/benvenuto/benvenuto.component.html
+++ b/src/app/componenti/benvenuto/benvenuto.component.html
@@ -10,7 +10,7 @@
         </mat-list>
 
         <mat-list class="buttonList">
-            <mat-icon class="mx-4" routerLink="antipasti">arrow_upward</mat-icon>
+            <mat-icon class="mx-4" routerLink="start">arrow_upward</mat-icon>
             <mat-icon class="mx-4" routerLink="">exit_to_app</mat-icon>
         </mat-list>
     </mat-drawer>
