--- a/src/app/componenti/dashboard/dashboard.component.html
+++ b/src/app/componenti/dashboard/dashboard.component.html
@@ -1,6 +1,14 @@
 <router-outlet></router-outlet>
 
+
+
+
 <div class="wrapper p-0 d-flex flex-column align-items-center">
+  
+  
+  <div class="buttonLogin">
+    <mat-icon class="mx-2" routerLink="benvenuto/start">account_circle</mat-icon><p routerLink="benvenuto/start">Admin</p>
+  </div>
 
     <h1>Ristorante SulMare</h1>
     <button mat-raised-button extended routerLink="benvenuto/start" class="rounded-4 px-5 py-4">
@@ -17,7 +25,7 @@
 
 
     </div>
-    
+   
 </div>
 
 
