--- a/src/app/componenti/dashboard/dashboard.component.html
+++ b/src/app/componenti/dashboard/dashboard.component.html
@@ -8,6 +8,8 @@
   
   <div class="buttonLogin">
     <mat-icon class="mx-2" routerLink="login">account_circle</mat-icon><p routerLink="login">Admin</p>
+    <mat-icon class="mx-2" routerLink="adminPage">account_circle</mat-icon><p routerLink="adminPage">AdminPage</p>
+
   </div>
 
     <h1>Ristorante SulMare</h1>
