--- a/src/app/componenti/admin-page/admin-page.component.html
+++ b/src/app/componenti/admin-page/admin-page.component.html
@@ -1,45 +1,52 @@
-
-  <!-- Sidebar navigation -->
   <div class="container-fluid">
-    <div class="row">
-      <nav class="col-md-2 d-md-block bg-light sidebar">
-        <div class="sidebar-sticky">
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active">
-                <i class="fas fa-user"></i>User Profile
-              </a>
-            </li>
-            <!-- Calling SignOut() Api from AuthService -->
-            <li class="nav-item">
-              <a class="nav-link" (click)="authService.SignOut()">
-                <i class="fas fa-sign-out-alt"></i>Log out
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!-- Main content -->
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div class="inner-adjust">
-          <div class="pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">User Profile</h1>
-          </div>
-          <!-- Show user data when logged in -->
-          <div class="row" *ngIf="authService.userData as user">
-            <div class="col-md-12">
-            
-              
-                <div class="media-body">
-                  <h1>Hello: <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></h1>
-              
-                  <p>Email: <strong>{{user.email}}</strong></p>
-               
-                </div>
-              
-            </div>
-          </div>
-        </div>
-      </main>
+    <div class="row border-bottom border-dark">
+      <div class="pt-3 pb-2 mb-3  col-12 col-md-2" *ngIf="authService.userData as user">
+        <h1>Hello: <strong>{{(user.displayName) ? user.displayName : 'Admin'}}</strong></h1>
+        <p>Email: <strong>{{user.email}}</strong></p>
+      </div>
+      <div class="col-12 col-md-10 pt-5 pb-2 mb-3 d-flex justify-content-evenly ">
+        
+        <button class="btn"(click)="toggleSidenav()">
+          <i class="fa-solid fa-plus fa-xl" style="color: #000000;">Inserisci un piatto</i>
+        </button>
+        <button class="btn" (click)="authService.SignOut()">
+          <i class="fa-solid fa-right-from-bracket fa-xl" style="color: #000000;">Logout</i>
+        </button>
+        
+      </div>
     </div>
   </div>
+  <div class="container d-flex justify-content-center">
+  <div class="sidenav w-75 " [ngClass]="{'open': isSidenavOpen}">
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+        <div class="col-12 col-md-6 d-flex flex-column">
+          <mat-form-field>
+            <mat-label>Seleziona in che sezione vuoi inserire il piatto</mat-label>
+            <mat-select>
+              <mat-option value="option1">Antipasti</mat-option>
+              <mat-option value="option2">Primi</mat-option>
+              <mat-option value="option3">Secondi</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Nome</mat-label>
+            <input matInput>
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Descrizione</mat-label>
+            <input matInput>
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Prezzo</mat-label>
+            <input matInput>
+          </mat-form-field>
+          
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  
