--- a/src/app/componenti/benvenuto/benvenuto.component.html
+++ b/src/app/componenti/benvenuto/benvenuto.component.html
@@ -6,7 +6,7 @@
             <mat-list-item role="listitem" routerLink="start" routerLinkActive="active">Benvenuto</mat-list-item>
             <mat-list-item role="listitem" routerLink="antipasti" routerLinkActive="active">Antipasti</mat-list-item>
             <mat-list-item role="listitem" routerLink="primipiatti" routerLinkActive="active">Primi</mat-list-item>
-            <mat-list-item role="listitem" routerLink="">Secondi</mat-list-item>   
+            <mat-list-item role="listitem" routerLink="secondipiatti">Secondi</mat-list-item>   
         </mat-list>
 
         <mat-list class="buttonList">
