--- a/src/app/componenti/primipiatti/primipiatti.component.html
+++ b/src/app/componenti/primipiatti/primipiatti.component.html
@@ -1,1 +1,8 @@
-<p>primipiatti works!</p>
+  <div class="d-flex justify-content-evenly mt-5" *ngFor="let primo of primipiatti">
+    <mat-card class="example-card rounded-5">
+      <img mat-card-image src="../../../assets/media/gamberiLuna.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-title class="mx-3 mt-1 text-secondary">{{ primo.nome }}</mat-card-title>
+      <mat-card-subtitle class="mx-3 mt-2">{{ primo.descrizione }}</mat-card-subtitle>
+      <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ primo.prezzo }}</mat-card-subtitle>
+    </mat-card>
+</div>
