--- a/src/app/componenti/antipasti/antipasti.component.html
+++ b/src/app/componenti/antipasti/antipasti.component.html
@@ -1,9 +1,14 @@
-<div class="d-flex justify-content-evenly mt-5" *ngFor="let antipasto of antipasti">
-    <mat-card class="example-card rounded-5">
+<div class="d-flex justify-content-evenly align-items-center flex-wrap mt-5">
+    <mat-card class="example-card rounded-5"  *ngFor="let antipasto of antipasti">
       <img mat-card-image src="../../../assets/media/gamberiLuna.jpg" alt="Photo of a Shiba Inu">
       <mat-card-title class="mx-3 mt-1 text-secondary">{{ antipasto.nome }}</mat-card-title>
       <mat-card-subtitle class="mx-3 mt-2">{{ antipasto.descrizione }}</mat-card-subtitle>
       <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ antipasto.prezzo }}</mat-card-subtitle>
+      <div class="d-flex justify-content-start mt-4 ms-2">
+      <button mat-fab color="warn" aria-label="Example icon button with a delete icon">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </div>
     </mat-card>
 </div>
     
