--- a/src/app/componenti/secondipiatti/secondipiatti.component.html
+++ b/src/app/componenti/secondipiatti/secondipiatti.component.html
@@ -1,8 +1,13 @@
-<div class="d-flex justify-content-evenly mt-5" *ngFor="let secondo of secondipiatti">
-    <mat-card class="example-card rounded-5">
+<div class="d-flex justify-content-evenly align-items-center mt-5" >
+    <mat-card class="example-card rounded-5" *ngFor="let secondo of secondipiatti">
       <img mat-card-image src="../../../assets/media/gamberiLuna.jpg" alt="Photo of a Shiba Inu">
       <mat-card-title class="mx-3 mt-1 text-secondary">{{ secondo.nome }}</mat-card-title>
       <mat-card-subtitle class="mx-3 mt-2">{{ secondo.descrizione }}</mat-card-subtitle>
       <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ secondo.prezzo }}</mat-card-subtitle>
+      <div class="d-flex justify-content-start mt-4 ms-2">
+        <button mat-fab color="warn" aria-label="Example icon button with a delete icon">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
     </mat-card>
 </div>
