--- a/src/app/componenti/benvenuto/benvenuto.component.css
+++ b/src/app/componenti/benvenuto/benvenuto.component.css
@@ -4,7 +4,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: url(/assets/media/base.jpeg);
+    /* background-image: url(/assets/media/base.jpeg); */
+    background: linear-gradient(to right, #b2fefa, #0ed2f7);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -27,6 +28,11 @@
 }
 
 .active{
-    background-color: #f7df3d;
+    background-color: #b2fefa;
+  }
+
+  mat-drawer{
+   background-color: rgb(255, 241, 241);
+    
   }
 
