--- a/src/app/componenti/dashboard/dashboard.component.css
+++ b/src/app/componenti/dashboard/dashboard.component.css
@@ -1,5 +1,6 @@
 .wrapper{
-  background: linear-gradient(to right, #fdbb2d, #22c352);
+  background: linear-gradient(to right, #b2fefa, #0ed2f7);
+
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
