--- a/src/app/componenti/primipiatti/primipiatti.component.html
+++ b/src/app/componenti/primipiatti/primipiatti.component.html
@@ -1,11 +1,11 @@
   <div class="d-flex justify-content-evenly mt-5 align-items-center" >
-    <mat-card class="example-card rounded-5" *ngFor="let primo of primipiatti">
-      <img mat-card-image src="../../../assets/media/gamberiLuna.jpg" alt="Photo of a Shiba Inu">
+    <mat-card class="example-card rounded-5" *ngFor="let primo of primipiatti let i = index">
+      <img mat-card-image alt="Photo of a Shiba Inu" *ngIf="primo.img" [src]="primo.img">
       <mat-card-title class="mx-3 mt-1 text-secondary">{{ primo.nome }}</mat-card-title>
       <mat-card-subtitle class="mx-3 mt-2">{{ primo.descrizione }}</mat-card-subtitle>
       <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ primo.prezzo }}</mat-card-subtitle>
       <div class="d-flex justify-content-start mt-4 ms-2">
-        <button mat-fab color="warn" aria-label="Example icon button with a delete icon">
+        <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="deleteItem(itemIds[i])">
           <mat-icon>delete</mat-icon>
         </button>
       </div>
