--- a/src/app/componenti/antipasti/antipasti.component.html
+++ b/src/app/componenti/antipasti/antipasti.component.html
@@ -1,8 +1,9 @@
 <div class="d-flex justify-content-evenly align-items-center flex-wrap mt-5">
     <mat-card class="example-card rounded-5"  *ngFor="let antipasto of antipasti; let i = index">
-      <img mat-card-image alt="Photo of a Shiba Inu" *ngIf="antipasto.img" [src]="antipasto.img">
+      <img class="img-card" alt="Photo of a Shiba Inu" *ngIf="antipasto.img" [src]="antipasto.img">
       <mat-card-title class="mx-3 mt-1 text-secondary">{{ antipasto.nome }}</mat-card-title>
-      <mat-card-subtitle class="mx-3 mt-2">{{ antipasto.descrizione }}</mat-card-subtitle>
+      <mat-card-subtitle [ngClass]="{ 'text-truncate' : antipasto.isTruncated}" class="">{{ antipasto.descrizione }}</mat-card-subtitle>
+      <i class="btn-show fa-solid fa-chevron-down" (click)="toggleTruncate(antipasto)">{{antipasto.isTruncated ? 'mostra' : 'chiudi'}}mostra</i>
       <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ antipasto.prezzo }}</mat-card-subtitle>
       <div class="d-flex justify-content-start mt-4 ms-2">
       <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="deleteItem(itemIds[i])">
@@ -11,8 +12,3 @@
     </div>
     </mat-card>
 </div>
-    
-
-
-     
-
