--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,9 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
  
+.img-card{
+    width: 200px;
+    height: 250px;
+    object-fit:contain;
+}
 
