--- a/src/app/componenti/antipasti/antipasti.component.html
+++ b/src/app/componenti/antipasti/antipasti.component.html
@@ -1,14 +1,17 @@
 <div class="d-flex justify-content-evenly align-items-center flex-wrap mt-5">
     <mat-card class="example-card rounded-5"  *ngFor="let antipasto of antipasti; let i = index">
-      <img class="img-card" alt="Photo of a Shiba Inu" *ngIf="antipasto.img" [src]="antipasto.img">
+      <img class="img-card align-self-center" alt="Photo of a Shiba Inu" *ngIf="antipasto.img" [src]="antipasto.img">
       <mat-card-title class="mx-3 mt-1 text-secondary">{{ antipasto.nome }}</mat-card-title>
-      <mat-card-subtitle [ngClass]="{ 'text-truncate' : antipasto.isTruncated}" class="">{{ antipasto.descrizione }}</mat-card-subtitle>
-      <i class="btn-show fa-solid fa-chevron-down" (click)="toggleTruncate(antipasto)">{{antipasto.isTruncated ? 'mostra' : 'chiudi'}}mostra</i>
+      <mat-card-subtitle class="py-2 px-3" [ngClass]="{ 'text-truncate' : antipasto.isTruncated}">{{ antipasto.descrizione }}</mat-card-subtitle>
+      <i [ngClass]="antipasto.isTruncated ? 'fa-chevron-down' : 'fa-chevron-up'" class="btn-show fa-solid py-2 px-3" (click)="toggleTruncate(antipasto)">{{antipasto.isTruncated ? 'mostra' : 'chiudi'}}</i>
       <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ antipasto.prezzo }}</mat-card-subtitle>
       <div class="d-flex justify-content-start mt-4 ms-2">
-      <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="deleteItem(itemIds[i])">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </div>
+        <span class="position-absolute top-0 start-100 translate-middle badge" *ngIf="isUserLoggedIn()">
+          <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="deleteItem(itemIds[i])">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </span>
+      
+     </div>
     </mat-card>
 </div>
