--- a/src/app/componenti/antipasti/antipasti.component.css
+++ b/src/app/componenti/antipasti/antipasti.component.css
@@ -1,93 +1,54 @@
-/* .example-card {
-    width: 240px;
-    min-height: 490px;
- }
-
- .btn-show{
-    width: 50px;
- }
-
-  */
-
-  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,900;1,400;1,900&display=swap');
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Playfair Display', serif;
+.card {
+  width: 300px;
+  padding: 50px 30px 50px 20px;
+  background: #ffffff;
+  border-radius: 24px;
+  margin: 100px;
 }
 
-#header{
-  margin:20px;
+.card img {
+  max-width: 220px;
+  height: 200px;
+  object-fit: cover;
+  margin: -100px 0 30px 0;
+  border-radius: inherit;
+  box-shadow: 0 60px 40px rgb(0 0 0 / 8%);
 }
-#header>h1{
-  text-align:center;
-  font-size:3rem;
+
+.btn{
+  position: absolute;
+  top: -25px;
+  background-color: rgb(211, 5, 5);
+  color: #ffffff;
+  display: none;
+  transform: translateX(-50%);
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 15px;
 }
-#header>p{
-  text-align:center;
-  font-size:1.5rem;
-  font-style:italic;
+
+.card:hover .btn{
+  display: block;
 }
-.container{
-  width:100vw;
-  display:flex;
-  justify-content:space-around;
-  flex-wrap:wrap;
-  padding:40px 20px;
-  
-}
-.card{
-  display:flex;
-  flex-direction:column;
-  width:400px;
-  margin-bottom:60px;
-  background-color: transparent;
-  border: none;
-  justify-content: end;
-}
-/* .card>div{
-  box-shadow:0 15px 20px 0 rgba(0,0,0,0.5);
-} */
-.card-image{
-  max-width:400px;
-  max-height:250px;
-  
-}
-.card-image>img{
-  width:100%;
-  height:100%;
-  object-fit:contain;
-  object-position:bottom;
-}
-.card-text{
-  margin:-30px auto;
-  margin-bottom:-50px;
-  height:300px;
-  width:300px;
-  background-color:#1D1C20;
-  color:#fff;
-  padding:20px;
-}
-.card-meal-type{
-  font-style:italic;
-}
-.card-title{
-  font-size:2.2rem;
-  margin-bottom:20px;
-  margin-top:5px;
-}
-.card-body{
-  font-size:1.25rem;
-}
-.card-price{
-  width:100px;
-  height:100px;
-  background-color:#970C0A;
-  color:#fff;
-  margin-left:auto;
-  font-size:2rem;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+
+@media (width <= 740px) {
+  .card {
+    margin: 50px 40px;
+    padding-left: 50px;
+    padding-right: 50px;
+    width: 100%;
+    text-align: center;
+    flex-direction: column;
+  }
+
+  .card h2 {
+    margin-right: 0;
+    font-size: 26px;
+  }
+
+  .card img {
+    margin: -100px 0 30px 0;
+    width: 100%;
+    max-width: 1000px;
+  }
 }
