--- a/src/app/componenti/antipasti/antipasti.component.html
+++ b/src/app/componenti/antipasti/antipasti.component.html
@@ -1,5 +1,5 @@
-<!-- <div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
-    <mat-card class="example-card rounded-5"  *ngFor="let antipasto of antipasti; let i = index">
+<div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
+    <mat-card class="example-card rounded-5 card"  *ngFor="let antipasto of antipasti; let i = index">
       <img class="img-card align-self-center" alt="Photo of a Shiba Inu" *ngIf="antipasto.img" [src]="antipasto.img">
       <mat-card-title class="mx-3 mt-1 text-secondary">{{ antipasto.nome }}</mat-card-title>
       <mat-card-subtitle class="py-2 px-3" [ngClass]="{ 'text-truncate' : antipasto.isTruncated}">{{ antipasto.descrizione }}</mat-card-subtitle>
@@ -7,31 +7,13 @@
       <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ antipasto.prezzo }}</mat-card-subtitle>
       <div class="d-flex justify-content-start mt-4 ms-2">
         <span class="position-absolute top-0 start-100 translate-middle badge" *ngIf="isUserLoggedIn()">
-          <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="deleteItem(itemIds[i])">
+          <button class="btn" aria-label="Example icon button with a delete icon" (click)="deleteItem(itemIds[i])">
             <mat-icon>delete</mat-icon>
           </button>
         </span>
       
      </div>
     </mat-card>
-</div> -->
+</div>
 
-<div id="header">
-  <h1>La Saveur</h1>
-  <p>The Traditional Fench Taste</p>
-    </div>
-  <div class="container">
-  <div class="card" *ngFor="let antipasto of antipasti; let i = index">
-    <div class="card-image">
-      <img *ngIf="antipasto.img" [src]="antipasto.img">
-    </div>
-    <div class="card-text">
-    
-      <h2 class="card-title">{{ antipasto.nome }}</h2>
-      <p class="card-body">{{ antipasto.descrizione }}</p>
-    </div>
-    <div class="card-price">€{{ antipasto.prezzo }}</div>
-  </div>
-    
-  
-  </div>
+
