--- a/src/app/componenti/antipasti/antipasti.component.html
+++ b/src/app/componenti/antipasti/antipasti.component.html
@@ -1,19 +1,21 @@
 <div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
-    <mat-card class="example-card rounded-5 card"  *ngFor="let antipasto of antipasti; let i = index">
+    <mat-card class="example-card rounded-5 card text-center d-flex flex-column justify-content-between "  *ngFor="let antipasto of antipasti; let i = index">
       <img class="img-card align-self-center" alt="Photo of a Shiba Inu" *ngIf="antipasto.img" [src]="antipasto.img">
-      <mat-card-title class="mx-3 mt-1 text-secondary">{{ antipasto.nome }}</mat-card-title>
-      <mat-card-subtitle class="py-2 px-3" [ngClass]="{ 'text-truncate' : antipasto.isTruncated}">{{ antipasto.descrizione }}</mat-card-subtitle>
-      <i [ngClass]="antipasto.isTruncated ? 'fa-chevron-down' : 'fa-chevron-up'" class="btn-show fa-solid py-2 px-3" (click)="toggleTruncate(antipasto)">{{antipasto.isTruncated ? 'mostra' : 'chiudi'}}</i>
-      <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ antipasto.prezzo }}</mat-card-subtitle>
-      <div class="d-flex justify-content-start mt-4 ms-2">
+      <mat-card-title  class="mx-3 mt-1 text-cursive fs-2 fw-bold">{{ antipasto.nome }}</mat-card-title>
+      <mat-card-subtitle class="py-2 px-3 text-cursive fs-4 fw-bold" [ngClass]="{ 'text-truncate' : antipasto.isTruncated}">{{ antipasto.descrizione }}</mat-card-subtitle>
+      <div class="d-flex justify-content-end align-items-center btn-show">
+        <p (click)="toggleTruncate(antipasto)">{{antipasto.isTruncated ? 'Mostra descrizione' : 'Chiudi descrizione'}}  
+          <i [ngClass]="antipasto.isTruncated ? 'fa-solid fa-caret-down' : 'fa-solid fa-caret-up'" ></i>
+        </p>     
+    </div>
+      <mat-card-subtitle class="mx-3 mt-2 fs-4 text-cursive text-dark">€{{ antipasto.prezzo }}</mat-card-subtitle>
+<!-- Bottone elimina card -->
+        <div class="d-flex justify-content-start mt-4 ms-2">
         <span class="position-absolute top-0 start-100 translate-middle badge" *ngIf="isUserLoggedIn()">
           <button class="btn" aria-label="Example icon button with a delete icon" (click)="deleteItem(itemIds[i])">
-            <mat-icon>delete</mat-icon>
+            <i class="fa-regular fa-trash-can fw-bold"></i>
           </button>
         </span>
-      
-     </div>
+      </div>
     </mat-card>
 </div>
-
-
