front-end sistemato da proseguire, ciao!

--- a/src/app/componenti/dashboard/dashboard.component.html
+++ b/src/app/componenti/dashboard/dashboard.component.html
@@ -1,27 +1,15 @@
 <router-outlet></router-outlet>
 
-
-
-
-<div class="wrapper p-0 d-flex flex-column align-items-center justify-content-center">
+<div class="wrapper p-0 d-flex flex-column align-items-center justify-content-start">
   
-  
- 
-  <div class="icons">
-    <mat-icon class="mx-3"> restaurant</mat-icon>
-    <mat-icon class="mx-3">free_breakfast</mat-icon>
-    <mat-icon class="mx-3">beach_access</mat-icon>
-    <mat-icon class="mx-3">wifi</mat-icon>
-   </div>
-    <h1 class="ml2">Ristorante SulMare</h1>
-    <button mat-raised-button extended routerLink="benvenuto/start" class="rounded-4 px-5 py-4">
+    <img style="width: 350px;" src="../../../assets/media/LogoR.png" class="mb-5" alt="logo">
+
+    <h1 class="ml2 mb-5">Ristorante SulMare</h1>
+    <button mat-raised-button extended routerLink="benvenuto/start" class="rounded-4 mt-5 px-5 py-4">
         <mat-icon>restaurant_menu</mat-icon> Apri il menù     
       </button>
-      
-      
+
       <div class="buttonLogin">
        <mat-icon routerLink="login" *ngIf="!isUserLoggedIn()">account_circle</mat-icon>
       </div>
- 
-   
 </div>
