--- a/src/app/componenti/benvenuto/benvenuto.component.html
+++ b/src/app/componenti/benvenuto/benvenuto.component.html
@@ -3,10 +3,10 @@
     
     <mat-drawer #drawer mode="side" class="cstDrawer" [opened]="isDrawerOpen">
         <mat-list role="list">
-            <mat-list-item role="listitem" routerLink="start" routerLinkActive="active">Benvenuto</mat-list-item>
-            <mat-list-item role="listitem" routerLink="antipasti" routerLinkActive="active">Antipasti</mat-list-item>
-            <mat-list-item role="listitem" routerLink="primipiatti" routerLinkActive="active">Primi</mat-list-item>
-            <mat-list-item role="listitem" routerLink="secondipiatti" routerLinkActive="active">Secondi</mat-list-item>   
+            <mat-list-item class="py-5" role="listitem" routerLink="start" routerLinkActive="active"><p class="menuPara">Benvenuto</p></mat-list-item>
+            <mat-list-item class="py-5" role="listitem" routerLink="antipasti" routerLinkActive="active"><p class="menuPara"> Antipasti</p> </mat-list-item>
+            <mat-list-item class="py-5" role="listitem" routerLink="primipiatti" routerLinkActive="active"><p class="menuPara"> Primi</p></mat-list-item>
+            <mat-list-item class="py-5" role="listitem" routerLink="secondipiatti" routerLinkActive="active"><p class="menuPara"> Secondi</p></mat-list-item>   
         </mat-list>
 
         <mat-list class="buttonList">
