--- a/src/app/componenti/start/start.component.html
+++ b/src/app/componenti/start/start.component.html
@@ -1,24 +1,37 @@
-<div class="container d-flex justify-content-center align-items-center containerTitle">
-    <div class="row">
-        <div class="col-12 col-md-12 d-flex flex-column justify-content-center align-items-center">
-            <mat-icon>room_service</mat-icon>
-            <h1>Ristorante SulMare</h1>
-            <p>
-                Situato sulla splendida costa del Mediterraneo, il nostro ristorante offre un'esperienza culinaria unica nel suo genere. Con una vista mozzafiato sull'azzurro mare, "SulMare" è il luogo perfetto per immergersi nella bellezza del mare mentre gustate prelibatezze culinarie straordinarie.
-            </p>
+<div class="container d-flex flex-column justify-content-between vh-75">
+    <div class="container-fluid">
+        <h2 class="text-center mt-4">Ristorante SulMare</h2>
+        <div class="row justify-content-evenly">
+            <div class="col-12 col-md-4 text-center">
+                <p>
+                    Situato sulla splendida costa del Mediterraneo, il nostro ristorante offre un'esperienza culinaria unica nel suo genere. Con una vista mozzafiato sull'azzurro mare, "SulMare" è il luogo perfetto per immergersi nella bellezza del mare mentre gustate prelibatezze culinarie straordinarie.
+                </p>
+                
+            </div>
+            
+            <div class="col-12 col-md-4">
+                <img style="width: 450px;" src="../../../assets/media/LogoR.png" alt="">
+                
+            </div>
+            
+            <div class="col-12 col-md-4 text-center">
+                <p>
+                    Situato sulla splendida costa del Mediterraneo, il nostro ristorante offre un'esperienza culinaria unica nel suo genere. Con una vista mozzafiato sull'azzurro mare, "SulMare" è il luogo perfetto per immergersi nella bellezza del mare mentre gustate prelibatezze culinarie straordinarie.
+                    Situato sulla splendida costa del Mediterraneo, il nostro ristorante offre un'esperienza culinaria unica nel suo genere. 
+                </p>
+            </div>
         </div>
-       
     </div>
-</div>
-
-
+    
+    
     <div class="container">
         <div class="row ">
             <div class="col-12 col-md-12 d-flex justify-content-center align-items-center ">
-                <h2 class="mb-0">Seguici su:</h2>
+                <h4 class="mb-0">Seguici su:</h4>
                 <a href=""><i class="fa-brands fa-instagram fa-bounce fa-2xl mx-3" style="color: #000000"></i></a>
                 <a href=""><i class="fa-brands fa-square-facebook fa-bounce fa-2xl" style="color: #000000"></i></a> 
             </div>
         </div>
-
-
+        
+    </div>
+</div>
