--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,6 @@
 @import 'ngx-toastr/toastr';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif, 'Allura', cursive}
 
  
