--- a/src/app/componenti/admin-page/admin-page.component.css
+++ b/src/app/componenti/admin-page/admin-page.component.css
@@ -1,5 +1,8 @@
-   
-   .sidenav {
+*{
+  font-family: "Font Awesome 6 Free";
+}
+
+.sidenav {
     position: fixed;
     
     width: 100%;
@@ -10,7 +13,7 @@
   }
   
   .sidenav.open {
-    top: 300px; 
+    top: 230px; 
     display: block;
     padding: 35px;
     border: 1px solid rgba(255, 255, 255, .25);
@@ -20,11 +23,13 @@
     backdrop-filter: blur(15px);
   } 
 
-  *{
-    font-family: "Font Awesome 6 Free";
-  }
+
 
   .error {
     color: red;
     font-size: 12px;
   }
+
+.btnLogout{
+  width: fit-content;
+}
