--- a/src/app/componenti/benvenuto/benvenuto.component.css
+++ b/src/app/componenti/benvenuto/benvenuto.component.css
@@ -15,12 +15,31 @@
   width: 250px;
 }
 
+.buttonAdm{
+  width: 150px;
+  height: 50px;
+  position: absolute;
+  bottom: 100px;
+  left: 50px;
+  border: 2px solid #6192b0;
+  border-radius: 25px;
+  background-color: #6192b0;
+  box-shadow: 0 0 10px 1px #6192b0 ;
+  text-align: center;
+}
 
 .buttonList{
   position: absolute;
-  bottom: 0;
+  bottom:20px;
   left: 50px;
+  text-align: center;
+  border: 2px solid #6192b0;
+  border-radius: 25px;
+  background-color: #6192b0;
+  box-shadow: 0 0 10px 1px #6192b0 ;
 }
+
+
 
 .buttonStart{
   font-family: 'Allura', cursive;
