--- a/src/app/componenti/benvenuto/benvenuto.component.html
+++ b/src/app/componenti/benvenuto/benvenuto.component.html
@@ -10,13 +10,11 @@
         </mat-list>
 
         <mat-list class="buttonList">
-            <mat-icon class="mx-4" routerLink="start">arrow_upward</mat-icon>
-            <mat-icon class="mx-4" routerLink="">home</mat-icon>
+            <mat-icon class="mx-3" routerLink="start">arrow_upward</mat-icon>
+            <mat-icon class="mx-3" routerLink="">home</mat-icon>
+            <mat-icon class="mx-3" routerLink="adminPage" *ngIf="isUserLoggedIn()"><mat-icon>account_circle</mat-icon></mat-icon>
         </mat-list>
 
-        <mat-list class="buttonAdm">
-            <p class="mx-4 mb-3" routerLink="adminPage" *ngIf="isUserLoggedIn()"><mat-icon>account_circle</mat-icon>AdminPage</p>
-        </mat-list>
     </mat-drawer>
     
     
