--- a/src/app/componenti/secondipiatti/secondipiatti.component.html
+++ b/src/app/componenti/secondipiatti/secondipiatti.component.html
@@ -1,19 +1,11 @@
 <div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
-  <mat-card class="example-card rounded-5"  *ngFor="let secondo of secondipiatti; let i = index">
-    <img  alt="Photo of a Shiba Inu" *ngIf="secondo.img" [src]="secondo.img">
-    <mat-card-title class="mx-3 mt-1 text-secondary">{{ secondo.nome }}</mat-card-title>
-    <mat-card-subtitle class="py-2 px-3" [ngClass]="{ 'text-truncate' : secondo.isTruncated}">{{ secondo.descrizione }}</mat-card-subtitle>
-    <i [ngClass]="secondo.isTruncated ? 'fa-chevron-down' : 'fa-chevron-up'" class="btn-show fa-solid py-2 px-3" (click)="toggleTruncate(secondo)">{{secondo.isTruncated ? 'mostra' : 'chiudi'}}</i>
-    <div class="d-flex justify-content-center align-items-bottom">
-      <mat-card-subtitle class="mx-3 mt-1">Prezzo: {{ secondo.prezzo }}</mat-card-subtitle>
-    </div>
- <!-- Bottone elimina card -->
-      <span class="position-absolute top-0 start-100 translate-middle badge" *ngIf="isUserLoggedIn()">
-        <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="deleteItem(itemIds[i])">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </span>
-
-  </mat-card>
-</div>
+  <app-card *ngFor="let secondo of secondipiatti; let i = index" [itemIds]="itemIds"
+  [item]="secondo"
+  [isTruncated]="secondo.isTruncated"
+  [cardTypePath]="cardTypePath"
+  [databasePath]="'/secondipiatti'"
+  (cardDeleted)="onCardDeleted($event)"
+  >
+  </app-card>
+  </div>
 
