sezioni aggiunte che bello andiamo a mangiare

--- a/src/app/componenti/admin-page/admin-page.component.html
+++ b/src/app/componenti/admin-page/admin-page.component.html
@@ -29,6 +29,8 @@
               <mat-option value="antipasti">Antipasti</mat-option>
               <mat-option value="primipiatti">Primi</mat-option>
               <mat-option value="secondipiatti">Secondi</mat-option>
+              <mat-option value="desserts">Desserts</mat-option>
+              <mat-option value="bevande">Bevande</mat-option>
             </mat-select>
           </mat-form-field>
 
