--- a/src/app/componenti/benvenuto/benvenuto.component.html
+++ b/src/app/componenti/benvenuto/benvenuto.component.html
@@ -6,7 +6,9 @@
             <mat-list-item class="py-5" role="listitem" routerLink="start" routerLinkActive="active"><p class="menuPara">Benvenuto</p></mat-list-item>
             <mat-list-item class="py-5" role="listitem" routerLink="antipasti" routerLinkActive="active"><p class="menuPara"> Antipasti</p> </mat-list-item>
             <mat-list-item class="py-5" role="listitem" routerLink="primipiatti" routerLinkActive="active"><p class="menuPara"> Primi</p></mat-list-item>
-            <mat-list-item class="py-5" role="listitem" routerLink="secondipiatti" routerLinkActive="active"><p class="menuPara"> Secondi</p></mat-list-item>   
+            <mat-list-item class="py-5" role="listitem" routerLink="secondipiatti" routerLinkActive="active"><p class="menuPara"> Secondi</p></mat-list-item>
+            <mat-list-item class="py-5" role="listitem" routerLink="desserts" routerLinkActive="active"><p class="menuPara"> Desserts</p></mat-list-item>
+            <mat-list-item class="py-5" role="listitem" routerLink="bevande" routerLinkActive="active"><p class="menuPara"> Bevande</p></mat-list-item>    
         </mat-list>
 
         <mat-list class="buttonList">
