--- a/src/app/componenti/secondipiatti/secondipiatti.component.html
+++ b/src/app/componenti/secondipiatti/secondipiatti.component.html
@@ -1,3 +1,9 @@
+<h2 class="text-center">I nostri secondi</h2>
+<blockquote class="text-center">“Dimmi quel che mangi e ti dirò chi sei” 
+    <footer>&ndash;Jean Anthelme Brillat Savarin
+
+    </footer>
+</blockquote>
 <div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
   <app-card *ngFor="let secondo of secondipiatti; let i = index" [itemIds]="itemIds"
   [item]="secondo"
