--- a/src/app/componenti/antipasti/antipasti.component.html
+++ b/src/app/componenti/antipasti/antipasti.component.html
@@ -1,3 +1,10 @@
+<h2 class="text-center">I nostri antipasti</h2>
+<blockquote class="text-center">“Poiché dobbiamo mangiare per vivere, tanto vale farlo con grazia e gusto.” 
+    <footer>&ndash;Mary Frances Kennedy Fisher
+
+
+    </footer>
+</blockquote>
 <div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
 <app-card *ngFor="let antipasto of antipasti; let i = index" [itemIds]="itemIds"
 [item]="antipasto"
