--- a/src/app/componenti/primipiatti/primipiatti.component.html
+++ b/src/app/componenti/primipiatti/primipiatti.component.html
@@ -1,3 +1,9 @@
+<h2 class="text-center">I nostri primi</h2>
+<blockquote class="text-center">“La vita è una combinazione di pasta e magia” 
+    <footer>&ndash;Federico Fellini
+
+    </footer>
+</blockquote>
 <div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
 <app-card *ngFor="let primo of primipiatti; let i = index" [itemIds]="itemIds"
 [item]="primo"
