quasi terminato responsive

--- a/src/app/componenti/antipasti/antipasti.component.html
+++ b/src/app/componenti/antipasti/antipasti.component.html
@@ -5,7 +5,7 @@
 
     </footer>
 </blockquote>
-<div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
+<div class="card-section d-flex justify-content-evenly align-items-start flex-wrap">
 <app-card *ngFor="let antipasto of antipasti; let i = index" [itemIds]="itemIds"
 [item]="antipasto"
 [isTruncated]="antipasto.isTruncated"
