--- a/src/app/componenti/desserts/desserts.component.html
+++ b/src/app/componenti/desserts/desserts.component.html
@@ -4,7 +4,7 @@
 
     </footer>
 </blockquote>
-<div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
+<div class="card-section d-flex justify-content-evenly align-items-start flex-wrap mt-5">
     <app-card *ngFor="let dessert of desserts; let i = index" [itemIds]="itemIds"
     [item]="dessert"
     [isTruncated]="dessert.isTruncated"
