--- a/src/app/componenti/primipiatti/primipiatti.component.html
+++ b/src/app/componenti/primipiatti/primipiatti.component.html
@@ -4,7 +4,7 @@
 
     </footer>
 </blockquote>
-<div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
+<div class="card-section d-flex justify-content-evenly align-items-start flex-wrap mt-5">
 <app-card *ngFor="let primo of primipiatti; let i = index" [itemIds]="itemIds"
 [item]="primo"
 [isTruncated]="primo.isTruncated"
