--- a/src/app/componenti/secondipiatti/secondipiatti.component.html
+++ b/src/app/componenti/secondipiatti/secondipiatti.component.html
@@ -4,7 +4,7 @@
 
     </footer>
 </blockquote>
-<div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
+<div class= "card-section d-flex justify-content-evenly align-items-start flex-wrap mt-5">
   <app-card *ngFor="let secondo of secondipiatti; let i = index" [itemIds]="itemIds"
   [item]="secondo"
   [isTruncated]="secondo.isTruncated"
