--- a/src/app/componenti/antipasti/antipasti.component.css
+++ b/src/app/componenti/antipasti/antipasti.component.css
@@ -23,3 +23,48 @@ blockquote footer{
     font-weight: bold;
 
 }
+
+.card-section{
+  margin-top: 3rem;
+}
+
+@media (max-width: 992px) {
+  blockquote footer {
+    font-size: 15px;
+    top: 100px;
+    right: 10px;
+  }
+}
+
+@media (max-width: 820px) {
+  blockquote footer {
+    font-size: 20px;
+    top: 150px;
+    right: 10px;
+  }
+  .card-section{
+   margin-top: 100px;
+  }
+
+}
+
+@media (max-width: 1122px) {
+  blockquote footer {
+    font-size: 20px;
+    top: 60px;
+    right: 10px;
+  }
+}
+
+
+@media (max-width: 435px) {
+  blockquote footer {
+    font-size: 20px;
+    top: 90px;
+    right: 10px;
+  }
+  .card-section{
+   margin-top: 100px;
+  }
+
+}
