--- a/src/app/componenti/bevande/bevande.component.html
+++ b/src/app/componenti/bevande/bevande.component.html
@@ -5,7 +5,7 @@
     </footer>
 </blockquote>
 
-<div class="d-flex justify-content-evenly align-items-start flex-wrap mt-5">
+<div class="card-section d-flex justify-content-evenly align-items-start flex-wrap mt-5">
     <app-card *ngFor="let bevanda of bevande; let i = index" [itemIds]="itemIds"
     [item]="bevanda"
     [isTruncated]="bevanda.isTruncated"
