--- a/src/app/componenti/card/card.component.css
+++ b/src/app/componenti/card/card.component.css
@@ -33,7 +33,8 @@
     border-radius: 50%;
     cursor: pointer;
     opacity: 0;
-    transition: transform 400ms ease-out; 
+    transition: opacity 0.5s linear 0s;
+    transform: translate(30px, -30px) scale(0.9, 1);
    }
   
   .card:hover{
@@ -42,7 +43,6 @@
   
   
   .card:hover .btn{
-    transform: translate(40px, -40px) scale(0.9, 1);
     opacity: 1;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
   }
@@ -52,7 +52,7 @@
       margin: 50px 40px;
       padding-left: 50px;
       padding-right: 50px;
-      width: 100%;
+      width: 75%;
       text-align: center;
       flex-direction: column;
     }
