--- a/src/app/componenti/dashboard/dashboard.component.html
+++ b/src/app/componenti/dashboard/dashboard.component.html
@@ -1,14 +1,34 @@
 <router-outlet></router-outlet>
 
-<div class="wrapper p-0 d-flex flex-column align-items-center justify-content-start">
+<div class="container-fluid wrapper p-0 d-flex flex-column align-items-center justify-content-start">
   
-    <img style="width: 350px;" src="../../../assets/media/LogoR.png" class="mb-5" alt="logo">
-
-    <h1 class="ml2 mb-5">Ristorante SulMare</h1>
-    <button mat-raised-button extended routerLink="benvenuto/start" class="btn rounded-pill mt-5 px-5 py-4">
+  
+  <div class="row">
+    <div class="col-12 col-md-12">
+      <img  src="../../../assets/media/LogoR.png" class="mb-5" alt="logo">
+    </div>
+  </div>
+  
+  
+  <div class="row">
+    <div class="col-12 col-md-12">
+      <h1 class="ml2 mb-5">Ristorante SulMare</h1>
+    </div>
+  </div>
+  
+  
+  <div class="row">
+    <div class="col-12 col-md-12">
+      <button mat-raised-button extended routerLink="benvenuto/start" class="btn rounded-pill mt-5 px-5 py-4">
         <mat-icon>restaurant_menu</mat-icon> Apri il menù     
       </button>
-
-       <button mat-raised-button extended class="btn buttonLogin rounded-pill" routerLink="login" *ngIf="!isUserLoggedIn()">Login</button>
       
+      <button mat-raised-button extended class="btn buttonLogin rounded-pill" routerLink="login" *ngIf="!isUserLoggedIn()">Login</button>
+      
+    </div>
+  </div>
+  
+  
+  
+  
 </div>
