--- a/src/app/componenti/secondipiatti/secondipiatti.component.css
+++ b/src/app/componenti/secondipiatti/secondipiatti.component.css
@@ -1,25 +1,70 @@
 h2{
-    font-size: 30px;
-    word-spacing: 10px;
-    letter-spacing: 5px;
-    font-family: 'Allura', cursive;
-    font-weight: bold;
-  }
+  font-size: 30px;
+  word-spacing: 10px;
+  letter-spacing: 5px;
+  font-family: 'Allura', cursive;
+  font-weight: bold;
+}
 
-  blockquote{
-    font-size: 26px;
-    font-family: 'Allura', cursive;
-    word-spacing: 10px;
-    letter-spacing: 5px;
-    position: relative;
-    
-  }
+blockquote{
+  font-size: 26px;
+  font-family: 'Allura', cursive;
+  word-spacing: 10px;
+  letter-spacing: 5px;
+  position: relative;
+  
+}
 
 blockquote footer{
-    font-size: 20px;
-    position: absolute;
-    top: 30px;
-    right: 200px;
-    font-weight: bold;
+  font-size: 20px;
+  position: absolute;
+  top: 30px;
+  right: 200px;
+  font-weight: bold;
+
+}
+
+.card-section{
+margin-top: 3rem;
+}
+
+@media (max-width: 992px) {
+blockquote footer {
+  font-size: 15px;
+  top: 100px;
+  right: 10px;
+}
+}
+
+@media (max-width: 820px) {
+blockquote footer {
+  font-size: 20px;
+  top: 150px;
+  right: 10px;
+}
+.card-section{
+ margin-top: 100px;
+}
+
+}
+
+@media (max-width: 1122px) {
+blockquote footer {
+  font-size: 20px;
+  top: 60px;
+  right: 10px;
+}
+}
+
+
+@media (max-width: 435px) {
+blockquote footer {
+  font-size: 20px;
+  top: 55px;
+  right: 10px;
+}
+.card-section{
+ margin-top: 100px;
+}
 
 }
