--- a/src/app/componenti/start/start.component.html
+++ b/src/app/componenti/start/start.component.html
@@ -2,19 +2,19 @@
     <div class="container-fluid">
         <h2 class="text-center mt-4">Ristorante SulMare</h2>
         <div class="row justify-content-evenly">
-            <div class="col-12 col-md-4 text-center">
+            <div class="col-12 col-md-4 text-center order-1">
                 <p>
                     Situato sulla splendida costa del Mediterraneo, il nostro ristorante offre un'esperienza culinaria unica nel suo genere. Con una vista mozzafiato sull'azzurro mare, "SulMare" è il luogo perfetto per immergersi nella bellezza del mare mentre gustate prelibatezze culinarie straordinarie.
                 </p>
                 
             </div>
             
-            <div class="col-12 col-md-4">
-                <img style="width: 450px;" src="../../../assets/media/LogoR.png" alt="">
+            <div class="col-12 col-md-4 order-2">
+                <img src="../../../assets/media/LogoR.png" alt="">
                 
             </div>
             
-            <div class="col-12 col-md-4 text-center">
+            <div class="col-12 col-md-4 text-center order-3">
                 <p>
                     Situato sulla splendida costa del Mediterraneo, il nostro ristorante offre un'esperienza culinaria unica nel suo genere. Con una vista mozzafiato sull'azzurro mare, "SulMare" è il luogo perfetto per immergersi nella bellezza del mare mentre gustate prelibatezze culinarie straordinarie.
                     Situato sulla splendida costa del Mediterraneo, il nostro ristorante offre un'esperienza culinaria unica nel suo genere. 
@@ -26,7 +26,7 @@
     
     <div class="container">
         <div class="row ">
-            <div class="col-12 col-md-12 d-flex justify-content-center align-items-center ">
+            <div class="col-12 col-md-12 d-flex justify-content-center align-items-center">
                 <h4 class="mb-0">Seguici su:</h4>
                 <a href=""><i class="fa-brands fa-instagram fa-bounce fa-2xl mx-3" style="color: #000000"></i></a>
                 <a href=""><i class="fa-brands fa-square-facebook fa-bounce fa-2xl" style="color: #000000"></i></a> 
